Fix issue where some masks were too long and breaking the display panel

--- a/src/css/popup.css
+++ b/src/css/popup.css
@@ -792,6 +792,10 @@ sign-up-panel::after {
   display: flex;
   gap: var(--spacingXs);
   flex-direction: column;
+  width: calc( 100% - var(--spacingMd));
+  position: relative;
+  text-overflow: ellipsis;
+  overflow: hidden;
 }
 
 .fx-relay-mask-item-address {
